Demo/Kubernetes/todolist-frontend-main/todolist-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todolist-frontend-ingress
  namespace: todolist
spec:
  ingressClassName: nginx
  rules:
    - host: todolist.mixiyady.vn
      http:
        paths:
          - backend:
              service:
                name: todolist-frontend-service
                port:
                  number: 80
            path: /
            pathType: Prefix
